--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
+<provider
+    android:authorities="com.example.shasta.sunshine"
+    android:name=".data.WeatherProvider"
+    />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -39,5 +42,6 @@
                 android:value="com.example.shasta.sunshine.MainActivity" />
         </activity>
     </application>
+
 
 </manifest>
